--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.1.2",
