--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "node-cron": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.11.0"
