--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "node-cron": "^3.0.3",
+    "puppeteer": "^21.5.2",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.11.0"
